<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:orientation="vertical"
    android:background="#fafbf6"
    tools:context="login.vikas.com.myapplication.MainActivity">
ā
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:text="@string/reg_heading"
        android:id="@+id/reg_heading"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="15dp"
        android:id="@+id/name"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="15dp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:layout_marginBottom="15dp"
        android:id="@+id/pwd"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:layout_marginBottom="15dp"
        android:id="@+id/mobile"
        android:inputType="number"
        android:maxLength="10"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add"
        android:id="@+id/add"
        android:inputType="text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn"
        android:padding="15dp"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:background="#333"
        android:textColor="#fff"
        android:id="@+id/submit"/>
</LinearLayout>
